# studymate-rag-assistant

./: README.md  app.py  pyproject.toml  requirements.txt
evaluation/: EVAL.PY  analyze_results.py  evaluate_models.py  generate_test_data.py  human_scorer.html  human_tested.csv  model_comparison_aggregated.csv  model_comparison_raw.csv  testset.csv
evaluation/plots/: m4.qmd
index/: metadata.pkl
src/: __init__.py  build_index.py  chat.py  chunker.py  config.py  embedder.py  pdf_loader.py  rag.py
